アカウント編集画面を追加

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=アニメ放送情報表示ツール
+APP_NAME=放送情報表示ツール
 APP_ENV=local
 APP_KEY=base64:vJ4nwkQk2LIsDHBDJNWRuA9jF2UKKTuBa+ump3s0uDo=
 APP_DEBUG=true
